# ActivityDAG_AI

./: .bumpversion.cfg  .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  staticwebapp.config.json  swa-cli.config.json
.github/workflows/: deploy.yml
api/: host.json  requirements.txt
api/chat/: __init__.py  function.json
api/projects/: __init__.py  function.json
api/prompts/: system_prompt_schedule.md
api/session/: __init__.py  function.json
api/shared/: agent.py  analytics.py  blob_loader.py  config.py  data_loader.py  intent.py  llm.py  response_strategies.py  router.py  schedule_graph.py  session_store.py  sessions.py  tools.py  version.py
api/storage/: base.py  memory.py
api/version/: __init__.py
backend/: __init__.py  app.py
backend/criticalpath/: __init__.py  analytics.py  config.py  data_loader.py  llm.py  router.py
data/: P01-1_OBS.csv  P01-1_PCATTYPE.csv  P01-1_PROJECT.csv  P01-1_PROJPCAT.csv  P01-1_PROJWBS.csv  P01-1_TASK.csv  P01-1_TASKPRED.csv  P05-1.xer  xer_parser.py
data/exports/: P05-1_CALENDAR.csv  P05-1_CURRTYPE.csv  P05-1_PCATTYPE.csv  P05-1_PCATVAL.csv  P05-1_PROJECT.csv  P05-1_PROJPCAT.csv  P05-1_PROJWBS.csv  P05-1_RCATTYPE.csv  P05-1_RCATVAL.csv  P05-1_RSRC.csv  P05-1_RSRCCURVDATA.csv  P05-1_RSRCRATE.csv  P05-1_RSRCRCAT.csv  P05-1_SCHEDOPTIONS.csv  P05-1_TASK.csv  P05-1_TASKPRED.csv  P05-1_TASKRSRC.csv  P05-1_UDFTYPE.csv  P05-1_UDFVALUE.csv
frontend/: app.js  index.html  preview.html  styles.css
prompts/: system_prompt_schedule.md
scripts/: run_dev.sh
